testing/Travis/testcases/prototype/shouldSucceed/try6.adl
CONTEXT Try6 IN ENGLISH

PATTERN Try6
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RELATION u[E*Y]
CLASSIFY B IS F /\ B
CLASSIFY B IS B /\ G
CLASSIFY F ISA D
CLASSIFY G ISA D
CLASSIFY E ISA F
CLASSIFY A ISA G
-- CLASSIFY B ISA G
-- CLASSIFY B ISA F
-- CLASSIFY F IS B /\ F
-- CLASSIFY G IS B /\ G
RULE r = s!(t\/u)
ENDPATTERN

ENDCONTEXT

{-
testing generalisations: the resulting type will be 
-}